# clustering

./: .gitignore  03-31 final comparison of grouping algorithms.pptx  09-29 last update dead volume 3_0 and grouping algorithm 2_0 vs jitter models - Copy.pptx  README.md  pyproject.toml
Luca_previous work/: README.md
Luca_previous work/code/: README.md  analyze_results.py  analyze_synthesis.py  analyze_synthesis_realizations.py  grouping_interactions.py  grouping_interactions_primary_radii.py  radii_distribution.py  reading_data_bulk_silicon.py  reading_data_photons_and_electrons.py
src/clustering/: __init__.py  dbscan.py  kmeans.py
tests/: conftest.py  test_dbscan.py  test_kmeans.py
